# talos

./: .dockerignore  .flake8  .gitignore  AGENTS.md  CLAUDE.md  CLI_GITHUB_COMMANDS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  PERFORMANCE_ANALYSIS.md  README.md  README_ARBISCAN.md  alembic.ini  disabled_test_interactive.py  docker-compose.rofl.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  mypy.ini  proposal_example.py  proposal_example.txt  proposal_talos_response.txt  pyproject.toml  requirements.txt  rofl.yaml  run_checks.sh  talos_prompt.md  test_cli_memory.py  test_declarative_standalone.py  test_memory.index  test_memory.json  test_memory_integration.py  test_memory_prompt_fix.py  test_memory_tool_availability.py  verify.py
.github/workflows/: ci.yml  crypto_sentiment.yml  docs.yml  release-rofl.yml  thread_sentiment.yml  verify-docker-image.yml
agent/: abc.py  datasets.py  haystack_agent.py  models.py
alembic/: env.py
alembic/versions/: 2d1832776538_add_chainlink_bridging.py  48f62aff9aa9_add_swaps.py  54a4e7fb3a17_add_tx_hash_to_swaps.py  ba582872fd6c_initial_migration_with_all_models.py  d7ca3e4695b8_add_counter.py
docs/: STRUCTURED_DAG_TUTORIAL.md  index.md
docs/api/: core.md  services.md  tools.md
docs/architecture/: agents.md  components.md  hypervisor.md  skills-services.md
docs/cli/: arbiscan.md  crypto.md  github.md  interactive.md  memory.md  overview.md  proposals.md  twitter.md
docs/development/: code-style.md  contributing.md  performance.md  testing.md
examples/: README.md  declarative_prompt_example.py  example.py  extensible_framework_demo.py  langgraph_interactive_example.py  proposal_example.py  talos_tool_example.py  tool_example.py
integration_tests/: README.md  __init__.py  test_cli_memory.py  test_memory_integration.py  test_memory_prompt_fix.py  test_memory_tool_availability.py
proposal_example/: proposal_example.py  proposal_talos_response.txt
scripts/: build_and_push_container_image.sh  build_container_image.sh  install_deps.sh  run_checks.sh  start_server.sh  test_container.sh  verify_container_image.sh
startup_tasks/: 18ebceaf6799.py  __init__.py  completed_tasks.json  ec68f0115789.py  eccaf09839f2.py
tests/: disabled_test_agent.py  simple_supervisor.py  test_agent.py  test_async_supervisors.py  test_cli.py  test_crypto_sentiment.py  test_cryptography.py  test_data.py  test_declarative_prompts.py  test_dexscreener.py  test_dexscreener_price_data.py  test_document_loader.py  test_github_service.py  test_github_tools.py  test_letta_agent.py  test_main_agent.py  test_memory_tool.py  test_prompt_concatenation.py  test_prompt_formatting.py  test_scheduled_jobs.py  test_supervised_tool.py  test_supervisor.py  test_talos_sentiment.py  test_thread_sentiment.py  test_tools.py  test_twitter_persona.py  test_twitter_sentiment_skill.py  test_twitter_tool.py  test_twitter_voice.py  test_yield_manager.py
(+348 files in other folders)
