[project]
name = "treasury-agent"
version = "0.1.0"
description = "An AI agent for managing a cryptocurrency treasury."
authors = [{ name = "Jules", email = "agent@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talos"]

[project.scripts]
treasury-agent = "talos.core.cli:main"

[project.optional-dependencies]
core = ["beautifulsoup4", "requests", "pypdf", "pydantic", "langchain", "langchain-community", "langchain-openai", "duckduckgo-search", "faiss-cpu", "tiktoken", "ipfshttpclient", "pinata-python", "tweepy"]
dev = ["ruff", "mypy", "pytest"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
