[project]
name = "talos"
version = "0.1.0"
description = "An AI agent for managing a cryptocurrency treasury."
authors = [{ name = "Jules", email = "agent@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["beautifulsoup4", "requests", "pypdf", "pydantic", "langchain", "langchain-community", "langchain-openai", "duckduckgo-search", "faiss-cpu", "tiktoken", "ipfshttpclient", "pinata-python", "tweepy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talos", "src/crypto_sentiment"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
talos = "talos.core.cli:main"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-mock"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
