[project]
name = "talos"
version = "0.1.0"
description = "An AI agent for managing a cryptocurrency treasury."
authors = [{ name = "Jules", email = "agent@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyGithub==2.6.1",
    "textblob==0.19.0",
    "beautifulsoup4==4.13.4",
    "requests==2.32.4",
    "pypdf==5.8.0",
    "pydantic==2.11.7",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-openai==0.3.28",
    "duckduckgo-search==8.1.1",
    "faiss-cpu==1.11.0.post1",
    "tiktoken==0.9.0",
    "ipfshttpclient==0.7.0",
    "pinata-python==1.0.0",
    "tweepy==4.16.0",
    "instructor==1.10.0",
    "google-api-python-client>=2.176.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talos", "src/crypto_sentiment"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
talos = "talos.cli.main:app"

[project.optional-dependencies]
dev = [
    "ruff==0.12.4",
    "mypy==1.17.0",
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "isort==5.12.0"
]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
